--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+    "repository": {
+    "type": "git",
+    "url": "https://github.com/Michael-J-Scofield/nibba"
+  },
   "author": "Michael Scofield",
   "license": "ISC"
 }
